PCS BAckup 26Dec2023/Backup-Source/objects/Vision_Panorama_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Alt_Pkg_Size__c</fullName>
        <label>Alternative Pkg Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_on_Alternative_Pack_Size__c</fullName>
        <label>Bid on Alternative Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_on_Highest_Pack_Size__c</fullName>
        <label>Bid on Highest Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Panorama Queue</relationshipLabel>
        <relationshipName>Panorama_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Dosage_Form__c</fullName>
        <label>Dosage Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCN_Generic_Code_Number__c</fullName>
        <label>GCN (Generic Code Number)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GPI_Generic_Product_Identifier__c</fullName>
        <label>GPI (Generic Product Identifier)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GSN__c</fullName>
        <label>GSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_High_Pkg_Size__c</fullName>
        <label>High Pkg Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Bid_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bid Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_NDC_11__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Panorama Queue</relationshipLabel>
        <relationshipName>Panorama_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Panorama_Unique_Identifier__c</fullName>
        <label>Panorama Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Pkg_Size__c</fullName>
        <label>Pkg Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Number__c</fullName>
        <label>SKU Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Strength__c</fullName>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Annual_Units__c</fullName>
        <label>Total Annual Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Panorama Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vision_GCN_Generic_Code_Number__c</columns>
        <columns>Vision_GSN__c</columns>
        <columns>Vision_GPI_Generic_Product_Identifier__c</columns>
        <columns>Vision_NDC_11__c</columns>
        <columns>Vision_SKU_Number__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QueueNo-{0000000}</displayFormat>
        <label>Queue No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panorama Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>